python/testData/quickFixes/PyAddImportQuickFixTest/fullFromImportSourceNameInSuggestion/main.py
from foo.bar.baz import ClassA

print(ClassA, <error descr="Unresolved reference 'ClassB'">Cla<caret>ssB</error>)
